# AndroidUsbCamera

./: .gitignore  AndroidUsbCamera.cpp  AndroidUsbCamera.h  CMakeLists.txt  README.txt  main.cpp
.kdev4/: AndroidUsbCamera.kdev4
spike_code/: AndroidUsbCamera.cpp  databridge.cpp
src/: CMakeLists.txt  androidusbcamera.cpp  androidusbcamera.h  databridge.h  frame.cpp  frame.h  framesconverter.cpp  framesconverter.h  framescreator.cpp  framescreator.h  framesdataextractor.cpp  framesdataextractor.h  framesfactory.cpp  framesfactory.h  socketconnector.cpp  socketconnector.h
src/qtInterfaces/: CMakeLists.txt  abstractsocket.cpp  abstractsocket.h  socketinterface.cpp  socketinterface.h
test/: CMakeLists.txt  android_usb_camera_test_base.h  framescreatortest.cpp  framescreatortest.h  framesdataextractortest.cpp  framesdataextractortest.h  framesfactorytest.cpp  framesfactorytest.h  socketconnectorintegrationtest.cpp  socketconnectorintegrationtest.h  socketconnectortest.cpp  socketconnectortest.h
