project(AndroidUsbCamera)
cmake_minimum_required(VERSION 2.6)
find_package(Qt4 REQUIRED)
add_subdirectory(src)

include_directories(${QT_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} src)

set(AndroidUsbCamera_SRCS main.cpp )
qt4_automoc(${AndroidUsbCamera_SRCS})
add_executable(AndroidUsbCamera ${AndroidUsbCamera_SRCS})
target_link_libraries(AndroidUsbCamera AndroidUsbCameraStaticLib ${QT_QTCORE_LIBRARY} )

if( "x${CMAKE_BUILD_TYPE}" STREQUAL "xdebug")
  ENABLE_TESTING()
  add_subdirectory(test)
  ADD_TEST("SocketConnectorTest" "${CMAKE_CURRENT_BINARY_DIR}/test/SocketConnectorTest")
  ADD_TEST("FramesDataExtractorTest" "${CMAKE_CURRENT_BINARY_DIR}/test/FramesDataExtractorTest")
  ADD_TEST("FramesCreatorTest" "${CMAKE_CURRENT_BINARY_DIR}/test/FramesCreatorTest")
  ADD_TEST("FramesFactoryTest" "${CMAKE_CURRENT_BINARY_DIR}/test/FramesFactoryTest")
endif()